--- a/index.html
+++ b/index.html
@@ -1,7 +1,76 @@
+
 <!DOCTYPE html>
+<html lang="en">
+
 <html>
-	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+	
+	<head>
+	
+		<title> Home: Chetan Bhardwaj</title>
+		<link rel="stylesheet" type= "text/css" href="static/CSS/CSS2-flex.css">	
+		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
+
+		<meta name="title" content="Chetan Bhardwaj's Website">
+		<meta name="description" content="Chetan Bhardwaj's Website: Home">
+		<meta name="keywords" content="Portfolio,Computer Science">
+
+		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		
+		<meta name="robots" content="noindex, nofollow">
+
+	</head>
+	
+	
+	<body id="main">
+		
+		<h1 id= "name"> Chetan Bhardwaj </h1>
+		
+		<p id= "description"> Hi. I'm Chetan. Welcome to my website. </p>
+		
+		<div id= "socials">
+
+			<a href="mailto: chetan.bhardwaj6411@gmail.com">
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<rect x="3" y="5" width="18" height="14" rx="2" />
+			<polyline points="3 7 12 13 21 7" />
+			</svg>
+
+			<a href="https://github.com/ChetanBhardwaj6411">
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+			</svg>
+
+			<a href="https://www.linkedin.com/in/chetan-bhardwaj-a30081241/">
+			<svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="32" height="32" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+			<path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+			<rect x="4" y="4" width="16" height="16" rx="2" />
+			<line x1="8" y1="11" x2="8" y2="16" />
+			<line x1="8" y1="8" x2="8" y2="8.01" />
+			<line x1="12" y1="16" x2="12" y2="11" />
+			<path d="M16 16v-3a2 2 0 0 0 -4 0" />
+			</svg>
+		
+		<div id= "contents">					
+				
+			<h2 class= "projects"> <a href="/chetanbhardwaj6411.github.io/projects"> Projects </a> </h2>
+			
+			<h2 class= "articles"> <a href="/chetanbhardwaj6411.github.io/articles"> Blog </a> </h2>
+			
+			<h2 class= "about"> <a href="/chetanbhardwaj6411.github.io/about"> About </a> </h2>
+			
+			<h2 class= "contact"> <a href="/chetanbhardwaj6411.github.io/contact"> Contact </a> </h2>
+			
+		</div>
+		
 	</body>
+	
+	<div class = "footer">
+	
+		<footer> Copyright &#169 2022 Chetan Bhardwaj </footer> 
+
+	</div>
+
 </html>
+
