--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<head>
 	
 		<title> Home: Chetan Bhardwaj</title>
-		<link rel="stylesheet" type= "text/css" href="static/CSS/CSS2-flex.css">	
+		<link rel="stylesheet" type= "text/css" href="static/style.css">	
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
 
 		<meta name="title" content="Chetan Bhardwaj's Website">
