Minor: Change in blog.html and style.css;  Significant: Changes to index.html (Missing closing tags)

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <html>
 	
 	<head>
@@ -22,10 +21,24 @@
 			
 	</head>
 	
+	<header>
+
+		<div class= "name">
+			
+			<p>	Chetan Bhardwaj</p>
+
+		</div>	
+
+		<div class= "sections">
+			
+		</div>
+
+	</header>		
+
 	<body id="blog">
 		
-		
-		
+		<h1> The Blog </h1>
+
 		
 
 	</body>
