Minor changes to all the HTML documents

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	
 	<head>
 	
-		<title> Home: Chetan Bhardwaj</title>
-		<link rel="stylesheet" type= "text/css" href="static/style.css">	
+		<title> Home: Chetan Bhardwaj </title>
+		<link rel="stylesheet" type= "text/css" href="static/style.css">	 
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
 
 		<meta name="title" content="Chetan Bhardwaj's Website">
@@ -16,8 +16,10 @@
 
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		
-		<meta name="robots" content="noindex, nofollow">
+		<meta charset="UTF-8">
 
+		<meta name="robots" content="noindex, nofollow">
+		
 	</head>
 	
 	
