--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 	
 	<head>
 	
-		<title> Home: Chetan Bhardwaj</title>
+		<title> Projects: Chetan Bhardwaj</title>
 		<link rel="stylesheet" type= "text/css" href="static/style.css">	
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" type='text/css' href="https://fonts.googleapis.com/css?family=Font+Name">
@@ -18,6 +18,8 @@
 
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		
+		<meta charset="UTF-8">
+
 		<meta name="robots" content="noindex, nofollow">
 		
 	</head>
