--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,8 @@
 
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
 		
+		<meta charset="UTF-8">
+
 		<meta name="robots" content="noindex, nofollow">
 			
 	</head>
