Added an image; Changed the name of the file blog.html to articles.html; Replaced the word Blog in a few places with Articles

--- a/articles.html
+++ b/articles.html
@@ -6,13 +6,13 @@
 	
 	<head>
 
-		<title> Blog: Chetan Bhardwaj</title>
+		<title> Articles: Chetan Bhardwaj</title>
 		<link rel="stylesheet" type= "text/css" href="static/style.css">	
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
 		<link rel="stylesheet" type='text/css' href="https://fonts.googleapis.com/css?family=Font+Name">
 
 		<meta name="title" content="Chetan Bhardwaj's Website">
-		<meta name="description" content="Chetan Bhardwaj's Website: Blog">
+		<meta name="description" content="Chetan Bhardwaj's Website: Articles">
 		<meta name="keywords" content="Portfolio,Computer Science">
 
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
@@ -37,7 +37,7 @@
 
 	</header>		
 
-	<body id="blog">
+	<body id="articles">
 		
 		<h1> The Blog </h1>
 
