Significant Update: index.html and style.css

--- a/articles.html
+++ b/articles.html
@@ -1,48 +1,3 @@
 
-<!DOCTYPE html>
-<html lang="en">
+<!-- Use the Articles file from the final-blog folder -->
 
-<html>
-	
-	<head>
-
-		<title> Articles: Chetan Bhardwaj</title>
-		<link rel="stylesheet" type= "text/css" href="static/style.css">	
-		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
-		<link rel="stylesheet" type='text/css' href="https://fonts.googleapis.com/css?family=Font+Name">
-
-		<meta name="title" content="Chetan Bhardwaj's Website">
-		<meta name="description" content="Chetan Bhardwaj's Website: Articles">
-		<meta name="keywords" content="Portfolio,Computer Science">
-
-		<meta name="viewport" content="width=device-width,initial-scale=1"/>
-		
-		<meta charset="UTF-8">
-
-		<meta name="robots" content="noindex, nofollow">
-			
-	</head>
-	
-	<header>
-
-		<div class= "name">
-			
-			<p>	Chetan Bhardwaj</p>
-
-		</div>	
-
-		<div class= "sections">
-			
-		</div>
-
-	</header>		
-
-	<body id="articles">
-		
-		<h1> The Blog </h1>
-
-		
-
-	</body>
-	
-</html>
