Created a unique CSS file for every HTML file plus a 'global' Style.css file

--- a/Test.html
+++ b/Test.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
-<html lang="en">
 
-<html>
+<html lang="en">
 	
 	<head>
 	
 		<title> Test Page </title>
 		
-		<link rel="stylesheet" type= "text/css" href="static/css/style.css">
+		<link rel="stylesheet" type= "text/css" href="static/css/style-test.css">
 		<script src="static/js/script.js" defer> </script>
 
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
@@ -23,14 +21,10 @@
 		
 	</head>
 	
-	
-	<body id="main">
+	<body id="test-page">
 		
 		<nav>
-			
-			
-		
-		
+
 		</nav>
 		
 		<h1> The quick brown fox jumps over the lazy dog </h1>
