--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
-<html lang="en">
 
-<html>
+<html lang="en">
 	
 	<head>
 	
 		<title> Home: Chetan Bhardwaj </title>
 		
-		<link rel="stylesheet" type= "text/css" href="static/css/style.css">
+		<link rel="stylesheet" type= "text/css" href="static/css/style-index.css">
 		<script src="static/js/script.js" defer> </script>
 
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
@@ -23,15 +21,13 @@
 		
 	</head>
 	
-	
-	<body id="main">
+	<body id="main-page">
 
-		<div id= "main-header"> 
+		<!-- <header> 
 
-			<!-- <input id="button" type="submit" name="button" value="Dark Mode"/> <br> -->
-			<!-- <button> Dark Mode </button> -->
+			<br>
 
-		</div>
+		</header> -->
 
 		<h1 id= "main-name"> Chetan Bhardwaj </h1>
 
