--- a/projects.html
+++ b/projects.html
@@ -1,30 +1,27 @@
-
 <!DOCTYPE html>
+
 <html lang="en">
-
-
-<html>
 	
 	<head>
 	
-		<title> Projects: Chetan Bhardwaj</title>
-		<link rel="stylesheet" type= "text/css" href="static/style.css">	
+		<title> Projects: Chetan Bhardwaj </title>
+		
+		<link rel="stylesheet" type= "text/css" href="static/css/style-projects.css">
+		<script src="static/js/script.js" defer> </script>
+
 		<link rel="icon" href="media/Icon2.ico" type="image/vnd.microsoft.icon">
-		<link rel="stylesheet" type='text/css' href="https://fonts.googleapis.com/css?family=Font+Name">
 
 		<meta name="title" content="Chetan Bhardwaj's Website">
-		<meta name="description" content="Chetan Bhardwaj's Website: Projects">
+		<meta name="description" content="Chetan Bhardwaj's Website: Home">
 		<meta name="keywords" content="Portfolio,Computer Science">
-
 		<meta name="viewport" content="width=device-width,initial-scale=1"/>
+		<meta name="robots" content="noindex, nofollow">
 		
 		<meta charset="UTF-8">
-
-		<meta name="robots" content="noindex, nofollow">
 		
 	</head>
 	
-	<body id="projects">
+	<body id="projects-page">
 		
 		
 		
