--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 
 		<div id="main-contents">					
 				
-			<h3 class= "projects"> <a href="/chetanbhardwaj6411.github.io/projects"> Projects </a> </h3>
+			<h3 class= "projects"> <a href="projects.html"> Projects </a> </h3>
 			
-			<h3 class= "articles"> <a href="/chetanbhardwaj6411.github.io/articles"> Blog </a> </h3>
+			<h3 class= "articles"> <a href="articles.html"> Blog </a> </h3>
 			
-			<h3 class= "about"> <a href="/chetanbhardwaj6411.github.io/about"> About </a> </h3>
+			<h3 class= "about"> <a href="about.html"> About </a> </h3>
 			
-			<h3 class= "contact"> <a href="/chetanbhardwaj6411.github.io/contact"> Contact </a> </h3>
+			<h3 class= "contact"> <a href="contact.html"> Contact </a> </h3>
 			
 		</div>
 
