--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         sit amet consectetur adipisicing elit. Et fugiat eligendi, laborum 
                         illum fugit reiciendis repellat nam quo maxime incidunt natus non assumenda 
                         recusandae consequuntur voluptate 
-                        corporis obcaecati doloribus quis.
+                        corporis obcaecati doloribus quis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, numquam!
                     </p>
 
                     <div class="btn-container">
